# TI-Graphics-Accelerated-Video-streaming-

./: README  init.sh
TI_Graphics_SDK/: README
bc_renderer/: Makefile  README  bc_renderer.c  bc_renderer.h
documentation/: FAQ  README  performance.pptx
gst_plugin/: README  autogen.sh  configure.ac
gst_plugin/src/: Makefile.am  gst_buffer_manager.c  gst_buffer_manager.h  gst_render_bridge.c  gst_render_bridge.h  gstsink_plugin.c  rules.make
vs_gui/: Makefile  README  imgs.qrc  main.cpp  v3dfxGUI  v3dfxGUI.pro  vsGUI  vsGUI.pro  widget.cpp  widget.h  widget.ui
